--- a/src/components/oo-portal.html
+++ b/src/components/oo-portal.html
@@ -66,7 +66,8 @@
         <core-header-panel>
             <core-toolbar layout vertical center>
                 <core-icon icon="search"></core-icon>
-                <input type="search" id="search-bar" label="type a name of a flow" autocomplete="off">
+                <input type="search" id="search-bar" value="{{filter}}" label="type a name of a flow"
+                       autocomplete="off">
             </core-toolbar>
             <div class="container" layout vertical center>
                 <flow-list filter="{{filter}}"></flow-list>
@@ -75,12 +76,7 @@
     </template>
     <script>
         (function () {
-            Polymer('oo-portal', {
-                ready: function () {
-                    var search = document.querySelector('#search-bar');
-                    var flowList = document.querySelector('flow-list');
-                }
-            });
+            Polymer('oo-portal', {});
         })();
     </script>
 </polymer-element>
